Add zshcachedir and make it configurable

--- a/Makefile.in
+++ b/Makefile.in
@@ -146,6 +146,7 @@ sysconfdir = /etc
 dtachsessiondir = @dtachsessiondir@
 dtachsession = @dtachsession@
 
+zshcachedir = @zshcachedir@
 zshcompletioncachedir = @zshcompletioncachedir@
 zshistorydir = @zshistorydir@
 zshistory = @zshistory@
