--- a/zsh/functions/hc.in
+++ b/zsh/functions/hc.in
@@ -1,6 +1,6 @@
 emulate -L zsh
 
-local tmp=$(mktemp history.XXXXXXXXXX) || return 1
+local tmp=$(@MKTEMP@ history.XXXXXXXXXX) || return 1
 {
   local output=$(fc -W $tmp)
   if [[ -n $output ]]; then
