--- a/Makefile.in
+++ b/Makefile.in
@@ -425,6 +425,8 @@ sitelisp_elcs = \
 	emacs/site-lisp/now-eglot.elc \
 	emacs/site-lisp/now-git.elc \
 	emacs/site-lisp/now-init.elc \
+	emacs/site-lisp/now-nxml-mode.elc \
+	emacs/site-lisp/now-rnc-mode.elc \
 	emacs/site-lisp/now-project.elc \
 	emacs/site-lisp/now-ruby.elc \
 	emacs/site-lisp/now-smie.elc \
