--- a/Makefile.in
+++ b/Makefile.in
@@ -139,6 +139,7 @@ xdgconfighomeemacsdir = $(xdgconfighomedir)/emacs
 xdgconfighomeemacsetcschemadir = $(xdgconfighomeemacsdir)/etc/schema
 xdgconfighomeemacsinitsdir = $(xdgconfighomeemacsdir)/inits
 xdgconfighomeemacssitelispdir = $(xdgconfighomeemacsdir)/site-lisp
+xdgconfighomeemacssitelisptermdir = $(xdgconfighomeemacssitelispdir)/term
 xdgconfighomefontconfigdir = $(xdgconfighomedir)/fontconfig
 xdgconfighomegitdir = $(xdgconfighomedir)/git
 xdgconfighomevlcdir = $(xdgconfighomedir)/vlc
@@ -441,6 +442,13 @@ xdgconfighomeemacssitelisp_DATA = \
 	$(sitelisp_elcs:%.elc=%.el.gz) \
 	emacs/site-lisp/userloaddefs.el
 
+sitelispterm_elcs = \
+	emacs/site-lisp/term/now-xterm.elc
+
+xdgconfighomeemacssitelispterm_DATA = \
+	$(sitelispterm_elcs) \
+	$(sitelispterm_elcs:%.elc=%.el.gz)
+
 xdgconfighomefontconfig_DATA = \
 	fonts.conf
 
@@ -504,18 +512,20 @@ endif
 
 $(bin_SCRIPTS): bin/.dirstamp
 $(sitelisp_elcs): emacs/site-lisp/.dirstamp
+$(sitelispterm_elcs): emacs/site-lisp/term/.dirstamp
 $(xdgconfighomeemacs_DATA): emacs/.dirstamp
 m2/settings.xml: m2/.dirstamp
 zsh/zshrc: zsh/.dirstamp
 zsh/functions/hc: zsh/functions/.dirstamp
 git/config: git/.dirstamp
 
-$(sitelisp_elcs): ELC_INCLUDES =
-$(sitelisp_elcs): %.elc: %.el
+$(sitelisp_elcs) $(sitelispterm_elcs): ELC_INCLUDES =
+$(sitelisp_elcs) $(sitelispterm_elcs): %.elc: %.el
 	$(V_ELC)$(ELC) $<
 
 emacs/site-lisp/userloaddefs.el: \
 	$(sitelisp_elcs) \
+	$(sitelispterm_elcs) \
 	emacs/site-lisp/.dirstamp \
 	Makefile
 	$(V_ELC)$(EMACS) --batch -q --eval '(setq vc-handled-backends nil)' \
@@ -526,7 +536,9 @@ emacs/site-lisp/userloaddefs.el: \
 	              (when message \
 	                (message \"%s\" string)) \
 	              string))" \
-	  -f batch-update-autoloads $(srcdir)/emacs/site-lisp
+	  -f batch-update-autoloads \
+	  $(srcdir)/emacs/site-lisp \
+	  $(srcdir)/emacs/site-lisp/term
 	$(V_at)if test "$(srcdir)" != .; then mv $(srcdir)/$@ $@; fi
 	$(V_at)touch $@
 
@@ -538,6 +550,7 @@ ifneq ($(EMACS),)
 $(call DIR,xdgconfighomeemacs)
 $(call DIR,xdgconfighomeemacsetcschema)
 $(call DIR,xdgconfighomeemacssitelisp)
+$(call DIR,xdgconfighomeemacssitelispterm)
 endif
 $(call DIR,userconfm2)
 $(call DIR,userconfmixxx)
