--- a/Makefile.in
+++ b/Makefile.in
@@ -140,6 +140,7 @@ xdgconfighomeemacsetcschemadir = $(xdgconfighomeemacsdir)/etc/schema
 xdgconfighomeemacsinitsdir = $(xdgconfighomeemacsdir)/inits
 xdgconfighomeemacssitelispdir = $(xdgconfighomeemacsdir)/site-lisp
 xdgconfighomeemacssitelispinternationaldir = $(xdgconfighomeemacssitelispdir)/international
+xdgconfighomeemacssitelispprogmodesdir = $(xdgconfighomeemacssitelispdir)/progmodes
 xdgconfighomeemacssitelisptermdir = $(xdgconfighomeemacssitelispdir)/term
 xdgconfighomefontconfigdir = $(xdgconfighomedir)/fontconfig
 xdgconfighomegitdir = $(xdgconfighomedir)/git
@@ -450,6 +451,14 @@ xdgconfighomeemacssitelispinternational_DATA = \
 	$(sitelispinternational_elcs) \
 	$(sitelispinternational_elcs:%.elc=%.el.gz)
 
+sitelispprogmodes_elcs = \
+	emacs/site-lisp/progmodes/now-grep.elc
+
+xdgconfighomeemacssitelispprogmodes_DATA = \
+	$(sitelispprogmodes_elcs) \
+	$(sitelispprogmodes_elcs:%.elc=%.el.gz)
+
+
 sitelispterm_elcs = \
 	emacs/site-lisp/term/now-xterm.elc
 
@@ -522,6 +531,7 @@ $(bin_SCRIPTS): bin/.dirstamp
 $(xdgconfighomeemacs_DATA): emacs/.dirstamp
 $(xdgconfighomeemacssitelisp_DATA): emacs/site-lisp/.dirstamp
 $(xdgconfighomeemacssitelispinternational_DATA): emacs/site-lisp/international/.dirstamp
+$(xdgconfighomeemacssitelispprogmodes_DATA): emacs/site-lisp/progmodes/.dirstamp
 $(xdgconfighomeemacssitelispterm_DATA): emacs/site-lisp/term/.dirstamp
 m2/settings.xml: m2/.dirstamp
 zsh/zshrc: zsh/.dirstamp
@@ -530,15 +540,18 @@ git/config: git/.dirstamp
 
 $(sitelisp_elcs) \
 $(sitelispinternational_elcs) \
+$(sitelispprogmodes_elcs) \
 $(sitelispterm_elcs): ELC_INCLUDES =
 $(sitelisp_elcs) \
 $(sitelispinternational_elcs) \
+$(sitelispprogmodes_elcs) \
 $(sitelispterm_elcs): %.elc: %.el
 	$(V_ELC)$(ELC) $<
 
 emacs/site-lisp/userloaddefs.el: \
 	$(sitelisp_elcs) \
 	$(sitelispinternational_elcs) \
+	$(sitelispprogmodes_elcs) \
 	$(sitelispterm_elcs) \
 	Makefile
 	$(V_ELC)$(EMACS) --batch -q --eval '(setq vc-handled-backends nil)' \
@@ -552,6 +565,7 @@ emacs/site-lisp/userloaddefs.el: \
 	  -f batch-update-autoloads \
 	  $(srcdir)/emacs/site-lisp \
 	  $(srcdir)/emacs/site-lisp/international \
+	  $(srcdir)/emacs/site-lisp/progmodes \
 	  $(srcdir)/emacs/site-lisp/term
 	$(V_at)if test "$(srcdir)" != .; then mv $(srcdir)/$@ $@; fi
 	$(V_at)touch $@
@@ -565,6 +579,7 @@ $(call DIR,xdgconfighomeemacs)
 $(call DIR,xdgconfighomeemacsetcschema)
 $(call DIR,xdgconfighomeemacssitelisp)
 $(call DIR,xdgconfighomeemacssitelispinternational)
+$(call DIR,xdgconfighomeemacssitelispprogmodes)
 $(call DIR,xdgconfighomeemacssitelispterm)
 endif
 $(call DIR,userconfm2)
